Add logo to FOSS4G UK, update sponsors

--- a/_includes/sponsors_foss4guk2018.html
+++ b/_includes/sponsors_foss4guk2018.html
@@ -2,7 +2,7 @@
     <h2>Sponsors</h3>
 
 <h3> Venue & Party </h3>
-<a href="sponsors.html#geovation"><img src="images/GeoVationHubLogo_small.png" alt="Geovation" title="Geovation" /></a>
+<a href="sponsors.html#geovation"><img src="images/GeoVationHubLogo.png" alt="Geovation" title="Geovation" /></a>
 <a href="sponsors.html#astun"><img src="images/astun_small.png" alt="Astun" title="Astun" /></a>
 
 
