--- a/_layouts/foss4guk2018.html
+++ b/_layouts/foss4guk2018.html
@@ -1,14 +1,12 @@
 <!doctype html>
 <html>
-    {% include head.html %}
+    {% include head_foss4guk2018.html %}
   <body class="foss4guk2018">
     <div class="wrapper">
       <header>
         <h1><a href="/">OSGeo:UK</a></h1>
         <p>OSGeo UK Local Chapter</p>
-	 {% include sponsors_foss4guk2018.html %} 
-<!-- <object id="sailingship" type="image/svg+xml" data="/images/animatedship.svg" ></object> -->
-
+        {% include sponsors_foss4guk2018.html %} 
       </header>
       <section>
           {{ content }}
