updated sponsors column and page, added new sponsor logos, deleted superfluous images

--- a/_includes/sponsors_foss4guk2018.html
+++ b/_includes/sponsors_foss4guk2018.html
@@ -8,18 +8,19 @@
 
 <div class="gold">
     <h3> Gold </h3>
-    <a href="sponsors.html#esriuk"><img src="images/esri_logo.png" alt="Esri UK" title="Esri UK" /></a>
+    <a href="sponsors.html#esriuk"><img src="images/0015-gold-esri-small.png" alt="Esri UK" title="Esri UK" /></a>
 
     <!-- <a href="sponsors.html#ordnancesurvey"><img src="images/os_logo.png" alt="Ordnance Survey" title="Ordnance Survey" /></a>
     <a href="sponsors.html#astun"><img src="images/astun_small.png" alt="Astun" title="Astun" /></a>
     <a href="sponsors.html#scisys"><img src="images/scisys_logo.png" alt="SCISYS" title="SCISYS" /></a>
     <a href="sponsors.html#thinkWhere"><img src="images/thinkWhere_logo.png" alt="thinkWhere" title="thinkWhere" /></a>
-    <a href="sponsors.html#what3words"><img src="images/what3words_logo.png" alt="what3words" title="what3words" /></a>    
+    <a href="sponsors.html#what3words"><img src="images/what3words_logo.png" alt="what3words" title="what3words" /></a>
     <a href="sponsors.html#2ndQuadrant"><img src="images/2ndq_logo_sm.png" alt="2ndQuadrant" title="2ndQuadrant" /></a> -->
 </div>
 <div class="silver">
     <h3> Silver </h3>
-     <a href="sponsors.html#geolytix"><img src="images/geolytix.png" alt="Geolytix" title="Geolytix" /></a>
+    <a href="sponsors.html#carto"><img src="images/0018-silver-carto-small.png" alt="Carto" title="Carto" /></a>
+    <a href="sponsors.html#geolytix"><img src="images/geolytix.png" alt="Geolytix" title="Geolytix" /></a>
     <!-- <a href="sponsors.html#google"><img src="images/google_small.png" alt="Google" title="Google" /></a> -->
     <!-- <a href="sponsors.html#agi"><img src="images/agi_logo_sm.png" alt="AGI" title="AGI" /></a>
     <a href="sponsors.html#anguscouncil"><img src="images/angus_council_logo.png" alt="Angus Council" title="Angus Council" /></a>
@@ -32,5 +33,6 @@
 <div class="bronze">
     <h3> Bronze </h3>
     <a href="sponsors.html#google"><img src="images/google_small.png" alt="Google" title="Google" /></a>
+    <a href="sponsors.html#scisys"><img src="images/0020-bronze-Scisys-small.png" alt="Google" title="Google" /></a>
 </div>
 </div>
