improved sizing of logos, fixed scisys logo

--- a/_includes/sponsors_foss4guk2018.html
+++ b/_includes/sponsors_foss4guk2018.html
@@ -33,6 +33,6 @@
 <div class="bronze">
     <h3> Bronze </h3>
     <a href="sponsors.html#google"><img src="images/google_small.png" alt="Google" title="Google" /></a>
-    <a href="sponsors.html#scisys"><img src="images/0020-bronze-Scisys-small.png" alt="Google" title="Google" /></a>
+    <a href="sponsors.html#scisys"><img src="images/0020-bronze-Scisys-small.jpg" alt="Scisys" title="Scisys" /></a>
 </div>
 </div>
