--- a/_includes/sponsors_foss4guk2018.html
+++ b/_includes/sponsors_foss4guk2018.html
@@ -8,7 +8,7 @@
 
 <div class="gold">
     <h3> Gold </h3>
-    <a href="sponsors.html#esriuk"><img src="images/0015-gold-esri-small.png" alt="Esri UK" title="Esri UK" /></a>
+    <a href="sponsors.html#esriuk"><img src="images/0015-gold-esri-small.PNG" alt="Esri UK" title="Esri UK" /></a>
 
     <!-- <a href="sponsors.html#ordnancesurvey"><img src="images/os_logo.png" alt="Ordnance Survey" title="Ordnance Survey" /></a>
     <a href="sponsors.html#astun"><img src="images/astun_small.png" alt="Astun" title="Astun" /></a>
@@ -32,7 +32,7 @@
 </div>
 <div class="bronze">
     <h3> Bronze </h3>
-    <a href="sponsors.html#google"><img src="images/google_small.png" alt="Google" title="Google" /></a>
+    <a href="sponsors.html#google"><img src="images/google_small.png" alt="Google" title="Google" /></a><br>
     <a href="sponsors.html#scisys"><img src="images/0020-bronze-Scisys-small.jpg" alt="Scisys" title="Scisys" /></a>
 </div>
 </div>
