fix ESRI logo on start page

--- a/_includes/sponsors_foss4guk2018.html
+++ b/_includes/sponsors_foss4guk2018.html
@@ -8,7 +8,7 @@
 
 <div class="gold">
     <h3> Gold </h3>
-    <a href="sponsors.html#esriuk"><img src="images/0015-gold-esri-small.PNG" alt="Esri UK" title="Esri UK" /></a>
+    <a href="sponsors.html#esriuk"><img src="images/0015-gold-esri-small.png" alt="Esri UK" title="Esri UK" /></a>
 
     <!-- <a href="sponsors.html#ordnancesurvey"><img src="images/os_logo.png" alt="Ordnance Survey" title="Ordnance Survey" /></a>
     <a href="sponsors.html#astun"><img src="images/astun_small.png" alt="Astun" title="Astun" /></a>
