added axismaps sponsor entry

--- a/_includes/sponsors_foss4guk2018.html
+++ b/_includes/sponsors_foss4guk2018.html
@@ -32,6 +32,7 @@
 </div>
 <div class="bronze">
     <h3> Bronze </h3>
+    <a href="sponsors.html#axismaps"><img src="images/0019-bronze-axis-maps.png" alt="Axis Maps" title="Axis Maps" /></a><br>
     <a href="sponsors.html#google"><img src="images/google_small.png" alt="Google" title="Google" /></a><br>
     <a href="sponsors.html#scisys"><img src="images/0020-bronze-Scisys-small.jpg" alt="Scisys" title="Scisys" /></a>
 </div>
