added WRLD sponsorship to FOSS4G UK 2018

--- a/_includes/sponsors_foss4guk2018.html
+++ b/_includes/sponsors_foss4guk2018.html
@@ -21,6 +21,7 @@
     <h3> Silver </h3>
     <a href="sponsors.html#carto"><img src="images/0018-silver-carto-small.png" alt="Carto" title="Carto" /></a>
     <a href="sponsors.html#geolytix"><img src="images/geolytix.png" alt="Geolytix" title="Geolytix" /></a>
+    <a href="sponsors.html#wrld"><img src="images/0021-silver-wrld.png" alt="WRLD" title="WRLD" /></a>
     <!-- <a href="sponsors.html#google"><img src="images/google_small.png" alt="Google" title="Google" /></a> -->
     <!-- <a href="sponsors.html#agi"><img src="images/agi_logo_sm.png" alt="AGI" title="AGI" /></a>
     <a href="sponsors.html#anguscouncil"><img src="images/angus_council_logo.png" alt="Angus Council" title="Angus Council" /></a>
