FOSS4G UK 2018: added GeoCat as new silver sponsor

--- a/_includes/sponsors_foss4guk2018.html
+++ b/_includes/sponsors_foss4guk2018.html
@@ -20,6 +20,7 @@
 <div class="silver">
     <h3> Silver </h3>
     <a href="sponsors.html#carto"><img src="images/0018-silver-carto-small.png" alt="Carto" title="Carto" /></a>
+    <a href="sponsors.html#geocat"><img src="images/0027-silver-geocat-small.png" alt="GeoCat" title="GeoCat" /></a>
     <a href="sponsors.html#geolytix"><img src="images/geolytix.png" alt="Geolytix" title="Geolytix" /></a>
     <a href="sponsors.html#wrld"><img src="images/0021-silver-wrld.png" alt="WRLD" title="WRLD" /></a>
     <!-- <a href="sponsors.html#google"><img src="images/google_small.png" alt="Google" title="Google" /></a> -->
