--- a/_includes/sponsors_foss4guk2019.html
+++ b/_includes/sponsors_foss4guk2019.html
@@ -1,41 +1,4 @@
 <div class="sponsors">
     <h2>Sponsors</h3>
 
-<h3> Venue & Party </h3>
-<a href="sponsors.html#geovation"><img src="images/GeoVationHubLogo.png" alt="Geovation" title="Geovation" /></a>
-<a href="sponsors.html#astun"><img src="images/astun_small.png" alt="Astun" title="Astun" /></a>
-
-
-<div class="gold">
-    <h3> Gold </h3>
-    <a href="sponsors.html#esriuk"><img src="images/0015-gold-esri-small.png" alt="Esri UK" title="Esri UK" /></a>
-
-    <!-- <a href="sponsors.html#ordnancesurvey"><img src="images/os_logo.png" alt="Ordnance Survey" title="Ordnance Survey" /></a>
-    <a href="sponsors.html#astun"><img src="images/astun_small.png" alt="Astun" title="Astun" /></a>
-    <a href="sponsors.html#scisys"><img src="images/scisys_logo.png" alt="SCISYS" title="SCISYS" /></a>
-    <a href="sponsors.html#thinkWhere"><img src="images/thinkWhere_logo.png" alt="thinkWhere" title="thinkWhere" /></a>
-    <a href="sponsors.html#what3words"><img src="images/what3words_logo.png" alt="what3words" title="what3words" /></a>
-    <a href="sponsors.html#2ndQuadrant"><img src="images/2ndq_logo_sm.png" alt="2ndQuadrant" title="2ndQuadrant" /></a> -->
-</div>
-<div class="silver">
-    <h3> Silver </h3>
-    <a href="sponsors.html#carto"><img src="images/0018-silver-carto-small.png" alt="Carto" title="Carto" /></a>
-    <a href="sponsors.html#geocat"><img src="images/0027-silver-geocat-small.png" alt="GeoCat" title="GeoCat" /></a>
-    <a href="sponsors.html#geolytix"><img src="images/geolytix.png" alt="Geolytix" title="Geolytix" /></a>
-    <a href="sponsors.html#wrld"><img src="images/0021-silver-wrld.png" alt="WRLD" title="WRLD" /></a>
-    <!-- <a href="sponsors.html#google"><img src="images/google_small.png" alt="Google" title="Google" /></a> -->
-    <!-- <a href="sponsors.html#agi"><img src="images/agi_logo_sm.png" alt="AGI" title="AGI" /></a>
-    <a href="sponsors.html#anguscouncil"><img src="images/angus_council_logo.png" alt="Angus Council" title="Angus Council" /></a>
-    <a href="sponsors.html#garsdaledesign"><img src="images/garsdale_small.jpg" alt="Garsdale Design" title="Garsdale Design" /></a>
-    <a href="sponsors.html#geoger"><img src="images/geoger_icon.png" alt="Geoger" title="Geoger" /></a>
-    <a href="sponsors.html#geovation"><img src="images/GeoVationHubLogo_small.png" alt="Geovation" title="Geovation" /></a>
-    <a href="sponsors.html#nautoguide"><img src="images/nautoguide-logo-sm.png" alt="NautoGuide" title="Nautoguide" /></a>
-    <a href="sponsors.html#terrabotics"><img src="images/Terabotics_Logo_SMALL.png" alt="Terrabotics" title="Terrabotics" /></a> -->
-</div>
-<div class="bronze">
-    <h3> Bronze </h3>
-    <a href="sponsors.html#axismaps"><img src="images/0019-bronze-axis-maps.png" alt="Axis Maps" title="Axis Maps" /></a><br>
-    <a href="sponsors.html#google"><img src="images/google_small.png" alt="Google" title="Google" /></a><br>
-    <a href="sponsors.html#scisys"><img src="images/0020-bronze-Scisys-small.jpg" alt="Scisys" title="Scisys" /></a>
-</div>
-</div>
+To be announced.
