changes to index and metadata

--- a/_layouts/foss4guk2019.html
+++ b/_layouts/foss4guk2019.html
@@ -4,8 +4,7 @@
   <body class="foss4guk2019">
     <div class="wrapper">
       <header>
-        <h1><a href="/">OSGeo:UK</a></h1>
-        <p>OSGeo UK Local Chapter</p>
+        <h1><a href="/">OSGeo:UK</a></h1><br>
         {% include sponsors_foss4guk2019.html %}
       </header>
       <section>
