--- a/_includes/head_foss4guk2019.html
+++ b/_includes/head_foss4guk2019.html
@@ -1,12 +1,35 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
-  <title>OSGeo:UK</title>
+  <title>FOSS4G UK 2019 - Edinburgh - OSGeo:UK</title>
   <link rel="stylesheet" href="/stylesheets/styles.css">
   <link rel="stylesheet" href="/stylesheets/github-light.css">
   <link rel="stylesheet" href="/stylesheets/osgeouk_newlogo.css">
   <link rel="stylesheet" href="/foss4guk2018/stylesheets/foss4guk2018.css">
   <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+  <link rel="shortcut icon" href="https://uk.osgeo.org/foss4guk2019/images/favicon.png" />
+
+  <meta property="og:locale" content="en_GB" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="FOSS4G UK 2019 - Edinburgh - OSGeo:UK" />
+  <meta property="og:description" content="Edinburgh is hosting FOSS4G UK 2019 on 19-21 September." />
+  <meta property="og:site_name" content="FOSS4G UK 2019" />
+  <meta property="article:tag" content="FOSS4GUK" />
+  <meta property="article:tag" content="FOSS4G" />
+  <meta property="article:tag" content="FOSS4GUK2019" />
+  <meta property="article:published_time" content="2018-10-12T14:10:36+01:00" />
+  <meta property="article:modified_time" content="2018-10-12T14:10:36+01:00" />
+  <meta property="og:updated_time" content="2018-10-12T14:10:36+01:00" />
+  <meta property="og:image" content="https://uk.osgeo.org/foss4guk2019/images/og_image.jpg" />
+  <meta property="og:image:width" content="600" />
+  <meta property="og:image:height" content="315" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:description" content="Edinburgh is hosting FOSS4G UK 2019 on 19-21 September." />
+  <meta name="twitter:title" content="FOSS4G UK 2019 - Edinburgh - OSGeo:UK" />
+  <meta name="twitter:site" content="@foss4guk" />
+  <meta name="twitter:image" content="https://uk.osgeo.org/foss4guk2019/images/og_image.jpg" />
+  <meta name="twitter:creator" content="@foss4guk" />
+
   <meta name="viewport" content="width=device-width">
   <!--[if lt IE 9]>
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
