index layout changes and sponsorship options

--- a/_layouts/foss4guk2019.html
+++ b/_layouts/foss4guk2019.html
@@ -4,7 +4,7 @@
   <body class="foss4guk2019">
     <div class="wrapper">
       <header>
-        <h1><a href="/">OSGeo:UK</a></h1><br>
+        <h1><a href="/"><img src="images/osgeouk_logo.jpg"></a></h1><br>
         {% include sponsors_foss4guk2019.html %}
       </header>
       <section>
