--- a/_includes/head_foss4guk2019.html
+++ b/_includes/head_foss4guk2019.html
@@ -35,7 +35,7 @@
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
   <div id="foss4guk2018-logo">
-    <img src="/foss4guk2019/images/FOSS4G-LOGO@2x.png"></img>
+    <a href="/foss4guk2019"><img src="/foss4guk2019/images/FOSS4G-LOGO@2x.png"></img></a>
   </div>
 
 </head>
