changed 2019 site layout and index page content

--- a/_includes/sponsors_foss4guk2019.html
+++ b/_includes/sponsors_foss4guk2019.html
@@ -1,4 +1,4 @@
 <div class="sponsors">
-    <h2>Sponsors:</h3>
-
-To be announced.
+<a href="/foss4guk2019" style="font-weight:bold;">Home</a><br>
+<a href="sponsors.html" style="font-weight:bold;">Sponsorship</a>
+</div>
