--- a/_layouts/foss4guk2019.html
+++ b/_layouts/foss4guk2019.html
@@ -3,13 +3,13 @@
     {% include head_foss4guk2019.html %}
   <body class="foss4guk2019">
     <div class="wrapper">
-      <header>
-        <h1><a href="/"><img src="images/osgeouk_logo.jpg"></a></h1><br>
-        {% include sponsors_foss4guk2019.html %}
-      </header>
-      <section>
+      <section style="float:left;">
           {{ content }}
       </section>
+      <header style="float:right;">
+      		  {% include sponsors_foss4guk2019.html %}
+	          <br><a href="/" style="position:relative; right:5px;" alt="OSGeo UK Chapter" title="OSGeo UK Chapter"><img src="images/osgeouk_logo.jpg"></a>
+      </header>
     </div>
 
 <div class="wrapper foot">
