Tidied up 2019 site, added talks info and sponsor logos

--- a/_includes/footer_foss4guk2019.html
+++ b/_includes/footer_foss4guk2019.html
@@ -1,4 +1,4 @@
 <footer>
-  <p>This project is maintained by <a href="https://github.com/osgeouk">osgeouk</a></p>
+  <p style="margin-top:50px;">This project is maintained by:<br><a href="/" style="position:relative; right:5px;" alt="OSGeo UK Chapter" title="OSGeo UK Chapter"><img src="images/osgeouk_logo.jpg"></a></p>
   <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
 </footer>
