--- a/_includes/sponsors_foss4guk2019.html
+++ b/_includes/sponsors_foss4guk2019.html
@@ -1,4 +1,16 @@
 <div class="sponsors">
 <a href="/foss4guk2019" style="font-weight:bold;">Home</a><br>
-<a href="sponsors.html" style="font-weight:bold;">Sponsorship</a>
+&nbsp;&#9656; <a href="sponsors.html" style="font-weight:bold;">Sponsorship</a><br>
+&nbsp;&#9656; <a href="talks_workshops.html" style="font-weight:bold;">Talks & Workshops</a><br><br>
+<h4 class="gold">Gold+ Sponsors:</h4>
+<img src="/foss4guk2019/images/Skyscanner-Logo-EPS-vector-image.png" class="sponsor_gold" alt="Gold+ Sponsor: Skyscanner" title="Gold+ Sponsor: Skyscanner"><br>
+<img src="/foss4guk2019/images/OS-Standard-Logo-Landscape-RGB.jpg" class="sponsor_gold" alt="Gold+ Sponsor: Ordnance Survey" title="Gold+ Sponsor: Ordnance Survey"><br>
+<img src="/foss4guk2019/images/thinkwhere_logo.png" class="sponsor_gold" alt="Gold+ Sponsor: Thinkwhere" title="Gold+ Sponsor: Thinkwhere"><br><br>
+<h4 class="gold">Gold Sponsors:</h4>
+<img src="/foss4guk2019/images/esri-main-logo.png" class="sponsor_gold" alt="Gold Sponsor: ESRI UK" title="Gold Sponsor: ESRI UK"><br>
+<img src="/foss4guk2019/images/2ndquadrant.jpg" class="sponsor_gold" alt="Gold Sponsor: 2nd Quadrant PostgreSQL" title="Gold Sponsor: 2nd Quadrant PostgreSQL"><br><br>
+<h4 class="silver">Silver Sponsors:</h4>
+<img src="/foss4guk2019/images/granite website.png" class="sponsor_silver" alt="Silver Sponsor: Registers of Scotland" title="Silver Sponsor: Registers of Scotland"><br>
+<img src="/foss4guk2019/images/Tilhill_Logo_Final2.jpg" class="sponsor_silver" alt="Silver Sponsor: Tillhill Forestry" title="Silver Sponsor: Tillhill Forestry"><br>
+
 </div>
