--- a/_layouts/foss4guk2019.html
+++ b/_layouts/foss4guk2019.html
@@ -3,12 +3,11 @@
     {% include head_foss4guk2019.html %}
   <body class="foss4guk2019">
     <div class="wrapper">
-      <section style="float:left;">
+      <section style="float:left; margin-right:50px;">
           {{ content }}
       </section>
-      <header style="float:right;">
+      <header style="float:left; margin-left:30px;">
       		  {% include sponsors_foss4guk2019.html %}
-	          <br><a href="/" style="position:relative; right:5px;" alt="OSGeo UK Chapter" title="OSGeo UK Chapter"><img src="images/osgeouk_logo.jpg"></a>
       </header>
     </div>
 
