added new sponsors and logos

--- a/_includes/sponsors_foss4guk2019.html
+++ b/_includes/sponsors_foss4guk2019.html
@@ -12,5 +12,11 @@
 <h4 class="silver">Silver Sponsors:</h4>
 <a href="https://www.ros.gov.uk/" target="_blank"><img src="/foss4guk2019/images/granite website.png" class="sponsor_silver" alt="Silver Sponsor: Registers of Scotland" title="Silver Sponsor: Registers of Scotland"></a><br>
 <a href="https://www.tilhill.com/" target="_blank"><img src="/foss4guk2019/images/Tilhill_Logo_Final2.jpg" class="sponsor_silver" alt="Silver Sponsor: Tillhill Forestry" title="Silver Sponsor: Tillhill Forestry"></a><br>
-
+<a href="https://www.addresscloud.com/" target="_blank"><img src="/foss4guk2019/images/ADDRESSCLOUD_MASTER_LOGO_CMYK.png" class="sponsor_silver" alt="Silver Sponsor: AddressCloud" title="Silver Sponsor: AddressCloud"></a><br>
+<a href="https://www.bgs.ac.uk/" target="_blank"><img src="/foss4guk2019/images/bgs_logo_2018.png" class="sponsor_silver" alt="Silver Sponsor: British Geological Survey" title="Silver Sponsor: British Geological Survey"></a><br>
+<a href="https://www.cawdorforestry.com/" target="_blank"><img src="/foss4guk2019/images/cawdor.jpg" class="sponsor_silver" alt="Silver Sponsor: Cawdor Forestry" title="Silver Sponsor: Cawdor Forestry"></a><br>
+<a href="https://www.thedatalab.com/" target="_blank"><img src="/foss4guk2019/images/datalab.jpg" class="sponsor_silver" alt="Silver Sponsor: The Data Lab" title="Silver Sponsor: The Data Lab"></a><br>
+<a href="https://geolytix.co.uk/" target="_blank"><img src="/foss4guk2019/images/GLX_LOGO.png" class="sponsor_silver" alt="Silver Sponsor: Geolytix" title="Silver Sponsor: Geolytix"></a><br>
+<h4 class="silver">Bronze Sponsors:</h4>
+<a href="https://nautoguide.com/" target="_blank"><img src="/foss4guk2019/images/Nautoguide-Logo.jpg" class="sponsor_bronze" alt="Bronze Sponsor: Nautoguide" title="Bronze Sponsor: Nautoguide"></a><br>
 </div>
