edited bronze sponsor title

--- a/_includes/sponsors_foss4guk2019.html
+++ b/_includes/sponsors_foss4guk2019.html
@@ -17,6 +17,6 @@
 <a href="https://www.cawdorforestry.com/" target="_blank"><img src="/foss4guk2019/images/cawdor.jpg" class="sponsor_silver" alt="Silver Sponsor: Cawdor Forestry" title="Silver Sponsor: Cawdor Forestry"></a><br>
 <a href="https://www.thedatalab.com/" target="_blank"><img src="/foss4guk2019/images/datalab.jpg" class="sponsor_silver" alt="Silver Sponsor: The Data Lab" title="Silver Sponsor: The Data Lab"></a><br>
 <a href="https://geolytix.co.uk/" target="_blank"><img src="/foss4guk2019/images/GLX_LOGO.png" class="sponsor_silver" alt="Silver Sponsor: Geolytix" title="Silver Sponsor: Geolytix"></a><br>
-<h4 class="silver">Bronze Sponsors:</h4>
+<h4 class="bronze">Bronze Sponsors:</h4>
 <a href="https://nautoguide.com/" target="_blank"><img src="/foss4guk2019/images/Nautoguide-Logo.jpg" class="sponsor_bronze" alt="Bronze Sponsor: Nautoguide" title="Bronze Sponsor: Nautoguide"></a><br>
 </div>
