Updated page title to include date

--- a/_includes/head_foss4guk2019.html
+++ b/_includes/head_foss4guk2019.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
-  <title>FOSS4G UK 2019 - Edinburgh - OSGeo:UK</title>
+  <title>FOSS4G UK 2019 - 18-21 Sep - Edinburgh - OSGeo:UK</title>
   <link rel="stylesheet" href="/stylesheets/styles.css">
   <link rel="stylesheet" href="/stylesheets/github-light.css">
   <link rel="stylesheet" href="/stylesheets/osgeouk_newlogo.css">
