Updated page description

--- a/_includes/head_foss4guk2019.html
+++ b/_includes/head_foss4guk2019.html
@@ -12,7 +12,7 @@
   <meta property="og:locale" content="en_GB" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="FOSS4G UK 2019 - Edinburgh - OSGeo:UK" />
-  <meta property="og:description" content="Edinburgh is hosting FOSS4G UK 2019 on 19-21 September." />
+  <meta property="og:description" content="Edinburgh is hosting FOSS4G UK 2019 from 18-21 September @ Dynamic Earth, with the main conference 19-20 September." />
   <meta property="og:site_name" content="FOSS4G UK 2019" />
   <meta property="article:tag" content="FOSS4GUK" />
   <meta property="article:tag" content="FOSS4G" />
@@ -24,7 +24,7 @@
   <meta property="og:image:width" content="600" />
   <meta property="og:image:height" content="315" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:description" content="Edinburgh is hosting FOSS4G UK 2019 on 19-21 September." />
+  <meta name="twitter:description" content="Edinburgh is hosting FOSS4G UK 2019 from 18-21 September @ Dynamic Earth, with the main conference 19-20 September." />
   <meta name="twitter:title" content="FOSS4G UK 2019 - Edinburgh - OSGeo:UK" />
   <meta name="twitter:site" content="@foss4guk" />
   <meta name="twitter:image" content="https://uk.osgeo.org/foss4guk2019/images/og_image.jpg" />
