Changed page description and colour scheme

--- a/_includes/head_foss4guk2019.html
+++ b/_includes/head_foss4guk2019.html
@@ -1,18 +1,18 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
-  <title>FOSS4G UK 2019 - 18-21 Sep - Edinburgh - OSGeo:UK</title>
+  <title>FOSS4G UK 2019 - Edinburgh - OSGeo:UK</title>
   <link rel="stylesheet" href="/stylesheets/styles.css">
   <link rel="stylesheet" href="/stylesheets/github-light.css">
   <link rel="stylesheet" href="/stylesheets/osgeouk_newlogo.css">
   <link rel="stylesheet" href="/foss4guk2019/stylesheets/foss4guk2019.css">
   <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
   <link rel="shortcut icon" href="https://uk.osgeo.org/foss4guk2019/images/favicon.png" />
-
+  <meta name="description" content="Edinburgh is hosting FOSS4G UK 2019 from 18-21 September @ Dynamic Earth, with the main conference 19-20th.">
   <meta property="og:locale" content="en_GB" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="FOSS4G UK 2019 - Edinburgh - OSGeo:UK" />
-  <meta property="og:description" content="Edinburgh is hosting FOSS4G UK 2019 from 18-21 September @ Dynamic Earth, with the main conference 19-20 September." />
+  <meta property="og:description" content="Edinburgh is hosting FOSS4G UK 2019 from 18-21 September @ Dynamic Earth, with the main conference 19-20th." />
   <meta property="og:site_name" content="FOSS4G UK 2019" />
   <meta property="article:tag" content="FOSS4GUK" />
   <meta property="article:tag" content="FOSS4G" />
@@ -24,7 +24,7 @@
   <meta property="og:image:width" content="600" />
   <meta property="og:image:height" content="315" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:description" content="Edinburgh is hosting FOSS4G UK 2019 from 18-21 September @ Dynamic Earth, with the main conference 19-20 September." />
+  <meta name="twitter:description" content="Edinburgh is hosting FOSS4G UK 2019 from 18-21 September @ Dynamic Earth, with the main conference 19-20th." />
   <meta name="twitter:title" content="FOSS4G UK 2019 - Edinburgh - OSGeo:UK" />
   <meta name="twitter:site" content="@foss4guk" />
   <meta name="twitter:image" content="https://uk.osgeo.org/foss4guk2019/images/og_image.jpg" />
