Added last bio and jumping rivers as sponsors

--- a/_includes/sponsors_foss4guk2019.html
+++ b/_includes/sponsors_foss4guk2019.html
@@ -27,4 +27,5 @@
 
 <h4 class="bronze">Bronze Sponsors:</h4>
 <a href="https://nautoguide.com/" target="_blank"><img src="/foss4guk2019/images/Nautoguide-Logo.jpg" class="sponsor_bronze" alt="Bronze Sponsor: Nautoguide" title="Bronze Sponsor: Nautoguide"></a><br>
+<a href="https://www.jumpingrivers.com/" target="_blank"><img src="/foss4guk2019/images/JumpingRivers.png" class="sponsor_bronze" alt="Bronze Sponsor: Jumping Rivers" title="Bronze Sponsor: Jumping Rivers"></a><br>
 </div>
