Added geomni as silver sponsor

--- a/_includes/sponsors_foss4guk2019.html
+++ b/_includes/sponsors_foss4guk2019.html
@@ -24,6 +24,7 @@
 <a href="https://geolytix.co.uk/" target="_blank"><img src="/foss4guk2019/images/GLX_LOGO.png" class="sponsor_silver" alt="Silver Sponsor: Geolytix" title="Silver Sponsor: Geolytix"></a><br>
 <a href="http://gis.scisys.co.uk/" target="_blank"><img src="/foss4guk2019/images/SCISYS-Colour-Vertical-Medium_jpg.jpg" class="sponsor_silver" alt="Silver Sponsor: SCISYS" title="Silver Sponsor: SCISYS"></a><br>
 <a href="http://google.co.uk/" target="_blank"><img src="/foss4guk2019/images/Google_2015_logo.png" class="sponsor_silver" alt="Silver Sponsor: Google" title="Silver Sponsor: Google"></a><br>
+<a href="https://www.geomni.com/" target="_blank"><img src="/foss4guk2019/images/geomni.png" class="sponsor_silver" alt="Silver Sponsor: Geomni" title="Silver Sponsor: Geomni"></a><br>
 
 <h4 class="bronze">Bronze Sponsors:</h4>
 <a href="https://nautoguide.com/" target="_blank"><img src="/foss4guk2019/images/Nautoguide-Logo.jpg" class="sponsor_bronze" alt="Bronze Sponsor: Nautoguide" title="Bronze Sponsor: Nautoguide"></a><br>
