added ticketing page and info

--- a/_includes/sponsors_foss4guk2019.html
+++ b/_includes/sponsors_foss4guk2019.html
@@ -2,7 +2,8 @@
 <a href="/foss4guk2019" style="font-weight:bold;">Home</a><br>
 &nbsp;&#9656; <a href="speakers.html" style="font-weight:bold;">Keynote Speakers</a><br>
 &nbsp;&#9656; <a href="sponsors.html" style="font-weight:bold;">Sponsorship</a><br>
-&nbsp;&#9656; <a href="talks_workshops.html" style="font-weight:bold;">Talks & Workshops</a><br><br>
+&nbsp;&#9656; <a href="talks_workshops.html" style="font-weight:bold;">Talks & Workshops</a><br>
+&nbsp;&#9656; <a href="tickets.html" style="font-weight:bold;">Tickets</a><br><br>
 <h4 class="gold">Gold+ Sponsors:</h4>
 <a href="https://www.skyscanner.net/" target="_blank"><img src="/foss4guk2019/images/Skyscanner-Logo-EPS-vector-image.png" class="sponsor_gold" alt="Gold+ Sponsor: Skyscanner" title="Gold+ Sponsor: Skyscanner"></a><br>
 <a href="https://www.ordnancesurvey.co.uk/" target="_blank"><img src="/foss4guk2019/images/OS-Standard-Logo-Landscape-RGB.jpg" class="sponsor_gold" alt="Gold+ Sponsor: Ordnance Survey" title="Gold+ Sponsor: Ordnance Survey"></a><br>
