Added live streaming page

--- a/_includes/sponsors_foss4guk2019.html
+++ b/_includes/sponsors_foss4guk2019.html
@@ -1,6 +1,7 @@
 <div class="sponsors">
 <a href="/foss4guk2019" style="font-weight:bold;">Home</a><br>
 &nbsp;&#9656; <a href="speakers.html" style="font-weight:bold;">Keynote Speakers</a><br>
+&nbsp;&#9656; <a href="live_streaming.html" style="font-weight:bold;">Live Streaming</a><br>
 &nbsp;&#9656; <a href="sponsors.html" style="font-weight:bold;">Sponsorship</a><br>
 &nbsp;&#9656; <a href="talks_workshops.html" style="font-weight:bold;">Talks & Workshops</a><br>
 &nbsp;&#9656; <a href="tickets.html" style="font-weight:bold;">Tickets</a><br>
@@ -10,8 +11,6 @@
 <a href="https://www.ordnancesurvey.co.uk/" target="_blank"><img src="/foss4guk2019/images/OS-Standard-Logo-Landscape-RGB.jpg" class="sponsor_gold" alt="Gold+ Sponsor: Ordnance Survey" title="Gold+ Sponsor: Ordnance Survey"></a><br>
 <a href="https://thinkwhere.com/" target="_blank"><img src="/foss4guk2019/images/thinkwhere_logo.png" class="sponsor_gold" alt="Gold+ Sponsor: Thinkwhere" title="Gold+ Sponsor: Thinkwhere"></a><br>
 <a href="https://astuntechnology.com/" target="_blank"><img src="/foss4guk2019/images/astun.png" class="sponsor_gold" alt="Gold+ Sponsor: Astun Technology" title="Gold+ Sponsor: Astun Technology"></a><br><br>
-
-
 
 <h4 class="gold">Gold Sponsors:</h4>
 <a href="https://www.esriuk.com/en-gb/home" target="_blank"><img src="/foss4guk2019/images/esri-main-logo.png" class="sponsor_gold" alt="Gold Sponsor: ESRI UK" title="Gold Sponsor: ESRI UK"></a><br>
