--- a/_includes/sponsors_foss4guk2019.html
+++ b/_includes/sponsors_foss4guk2019.html
@@ -1,5 +1,6 @@
 <div class="sponsors">
 <a href="/foss4guk2019" style="font-weight:bold;">Home</a><br>
+&nbsp;&#9656; <a href="LOC.html" style="font-weight:bold;">Organising Committee</a><br>
 &nbsp;&#9656; <a href="speakers.html" style="font-weight:bold;">Keynote Speakers</a><br>
 &nbsp;&#9656; <a href="live_streaming.html" style="font-weight:bold;">Live Streaming</a><br>
 &nbsp;&#9656; <a href="sponsors.html" style="font-weight:bold;">Sponsorship</a><br>
