--- a/_layouts/foss4guk2022.html
+++ b/_layouts/foss4guk2022.html
@@ -6,12 +6,12 @@
       <header class="sticky" id="stickymenu">
         <a id = "logo" href="/" title="OSGeo:UK"></a>
         <p>OSGeo UK Local Chapter</p>
-        <a href="#venues">Venues</a><br>
-        <a href="#call-for-talks">Talks</a><br>
-        <a href="#schedule">Schedule</a><br>
-        <a href="#keynote-presentations">Keynotes</a><br>
-        <a href="sponsorship.html">Sponsership</a><br>
-        <a href="#registration">Registration</a><br>
+        <a href="index.html#venues">Venues</a><br>
+        <a href="index.html#call-for-talks">Talks</a><br>
+        <a href="index.html#schedule">Schedule</a><br>
+        <a href="index.html#keynote-presentations">Keynotes</a><br>
+        <a href="sponsorship.html">Sponsorship</a><br>
+        <a href="index.html#registration">Registration</a><br>
       </header>
       <section class="content">
           {{ content }}
