Add FOSS4G:UK Logo to layout

--- a/_layouts/foss4guk2022.html
+++ b/_layouts/foss4guk2022.html
@@ -6,6 +6,7 @@
       <header class="sticky" id="stickymenu">
         <a id = "logo" href="/" title="OSGeo:UK"></a>
         <p>OSGeo UK Local Chapter</p>
+		<p><a href="index.html"><img src="images/logo.png" width="300" align="middle"></a></p>
         <a href="index.html#venues">Venues</a><br>
         <a href="index.html#call-for-talks">Talks</a><br>
         <a href="index.html#schedule">Schedule</a><br>
