--- a/_layouts/foss4guk2022.html
+++ b/_layouts/foss4guk2022.html
@@ -4,9 +4,7 @@
   <body>
     <div class="wrapper">
       <header class="sticky" id="stickymenu">
-        <a id = "logo" href="/" title="OSGeo:UK"></a>
-        <p>OSGeo UK Local Chapter</p>
-		<p><a href="index.html"><img src="images/logo.png" width="300" align="middle"></a></p>
+		<p><a href="index.html"><img src="images/logo.png" width="300"></a></p>
         <a href="index.html#venues">Venues</a><br>
         <a href="index.html#call-for-talks">Talks</a><br>
         <a href="index.html#schedule">Schedule</a><br>
@@ -19,6 +17,8 @@
       </section>
     </div>
 <div class="wrapper foot">
+	<a id = "logo" href="/" title="OSGeo:UK"></a>
+	<p>OSGeo UK Local Chapter</p>
       {% include footer_foss4guk2016.html %}
 </div>
     <script src="/javascripts/scale.fix.js"></script>
