Center menu and remove logo from home page (as now in menu)

--- a/_layouts/foss4guk2022.html
+++ b/_layouts/foss4guk2022.html
@@ -5,12 +5,14 @@
     <div class="wrapper">
       <header class="sticky" id="stickymenu">
 		<p><a href="index.html"><img src="images/logo.png" width="300"></a></p>
-        <a href="index.html#venues">Venues</a><br>
-        <a href="index.html#call-for-talks">Talks</a><br>
-        <a href="index.html#schedule">Schedule</a><br>
-        <a href="index.html#keynote-presentations">Keynotes</a><br>
-        <a href="sponsorship.html">Sponsorship</a><br>
-        <a href="index.html#registration">Registration</a><br>
+		<center>
+			<a href="index.html#venues">Venues</a><br>
+			<a href="index.html#call-for-talks">Talks</a><br>
+			<a href="index.html#schedule">Schedule</a><br>
+			<a href="index.html#keynote-presentations">Keynotes</a><br>
+			<a href="sponsorship.html">Sponsorship</a><br>
+			<a href="index.html#registration">Registration</a><br>
+		</center>
       </header>
       <section class="content">
           {{ content }}
