--- a/_layouts/foss4guk2022.html
+++ b/_layouts/foss4guk2022.html
@@ -13,7 +13,7 @@
 			<a href="sponsorship.html">Sponsorship</a><br>
 			<a href="index.html#registration">Registration</a><br>
 		<p></p>
-		<p><i>Many thanks to our national sponsors supporting FOSS4G:UK Local 2022:<i></p>
+		<p><i>Many thanks to our national sponsors supporting FOSS4G:UK Local 2022:</i></p>
 		<p><a href="https://www.ordnancesurvey.co.uk/"><img src="images/ordnance-survey.jpg" width="100" align="middle"></a></p>
 		<p><i><a href="sponsorship.html">Please check out all of our sponsors who are supporting FOSS4G:UK Local 2022</a></i></p>
 		</center>
