added email obfuscation for osgeo email

--- a/_layouts/foss4guk2022.html
+++ b/_layouts/foss4guk2022.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-    {% include head.html %}
+    {% include head_foss4guk2022.html %}
   <body>
     <div class="wrapper">
 
