--- a/_layouts/foss4guk2022.html
+++ b/_layouts/foss4guk2022.html
@@ -21,6 +21,7 @@
 			<br><br>
 			<p><i>Many thanks to our national sponsors supporting FOSS4G:UK Local 2022:</i></p>
             <a href="https://www.envsys.co.uk/"><img src="./images/env-sys.jpg" alt="Environment Systems Logo" width="280"></a>
+			<a href="https://geolytix.com/"><img src="./images/geolytix-logo.png" alt="Geolytix Logo" width="280"></a>
 			<a href="https://merginmaps.com/?utm_campaign=merginmaps&utm_medium=banner&utm_source=foss4guk2022"><img src="./images/mergin-maps.png" alt="Mergin Maps Logo" width="280"></a>
             <a href="https://www.ordnancesurvey.co.uk/"><img src="./images/OS logo prime RGB.jpg" alt="OS Logo" width="300"></a>
 			<p><i><a href="sponsorship.html">Please check out all of our sponsors who are supporting FOSS4G:UK Local 2022</a></i></p>
