--- a/_layouts/foss4guk2022.html
+++ b/_layouts/foss4guk2022.html
@@ -12,7 +12,7 @@
 
 			<!-- Menu -->
 			<a href="index.html#venues">Venues</a>&nbsp;<br class="desktop-only">
-			<a href="index.html#call-for-talks">Talks</a>&nbsp;<br class="desktop-only">
+			<a href="index.html#call-for-talks---extended-to-14th-oct-2022">Talks</a>&nbsp;<br class="desktop-only">
 			<a href="index.html#schedule">Schedule</a>&nbsp;<br class="desktop-only">
 			<a href="index.html#keynote-presentations">Keynotes</a>&nbsp;<br class="desktop-only">
 			<a href="sponsorship.html">Sponsorship</a>&nbsp;<br class="desktop-only">
