--- a/_layouts/foss4guk2022.html
+++ b/_layouts/foss4guk2022.html
@@ -11,13 +11,10 @@
 			<p><a href="index.html"><img src="images/logo.png" width="300" alt="FOSS4G UK Logo"></a></p>
 
 			<!-- Menu -->
+			<a href="index.html#keynotes">Keynotes</a>&nbsp;<br class="desktop-only">
 			<a href="index.html#venues">Venues</a>&nbsp;<br class="desktop-only">
-			<a href="index.html#call-for-talks---extended-to-14th-oct-2022">Talks</a>&nbsp;<br class="desktop-only">
-			<a href="index.html#schedule">Schedule</a>&nbsp;<br class="desktop-only">
-			<a href="index.html#keynote-presentations">Keynotes</a>&nbsp;<br class="desktop-only">
 			<a href="sponsorship.html">Sponsorship</a>&nbsp;<br class="desktop-only">
-			<a href="index.html#registration">Registration</a>&nbsp;<br class="desktop-only">
-
+			
 			<br>
 			<p><i>Many thanks to our national sponsors supporting FOSS4G:UK Local 2022:</i></p>
 			<a href="https://www.bgs.ac.uk/"><img src="https://www.bgs.ac.uk/wp-content/uploads/2022/08/BGS-Logo-Pos-RGB.svg" alt="British Geological Survey Logo" width="150"></a>
