--- a/_layouts/foss4guk2022.html
+++ b/_layouts/foss4guk2022.html
@@ -24,7 +24,7 @@
 			<a href="https://merginmaps.com/?utm_campaign=merginmaps&utm_medium=banner&utm_source=foss4guk2022"><img src="./images/mergin-maps.png" alt="Mergin Maps Logo" width="150"></a>
 			<a href="https://www.ordnancesurvey.co.uk/"><img src="./images/OS logo prime RGB.jpg" alt="OS Logo" width="175"></a>
             <!-- <a href="https://www.informed.com/"><img src="./images/informed-solutions.png" alt="Informed Solutions Logo" width="300"></a> -->
-			<p><i><a href="sponsorship.html">Please check out all of our sponsors who are supporting FOSS4G:UK Local 2022</a></i></p>
+			<p><i><a href="sponsorship.html">Please check out all of our sponsors who supported FOSS4G:UK Local 2022</a></i></p>
 		
 		</header>
 
