--- a/_layouts/foss4guk2023.html
+++ b/_layouts/foss4guk2023.html
@@ -8,8 +8,9 @@
 		<header class="sticky" id="stickymenu">
 
 			<!-- FOSS4G UK Logo -->
-			<p><a href="index.html"><object type="image/svg+xml" data="images/foss4guk2023-logo.svg">
-     </object></a></p>
+			<!-- <p><a href="index.html"><object type="image/svg+xml" data="images/foss4guk2023-logo.svg">
+     </object></a></p> -->
+			<p><a href="index.html"><img src="images/logo.png" width="300" alt="FOSS4G UK Logo"></a></p>
 
 			<!-- Menu -->
 			<!--<a href="index.html#keynotes">Keynotes</a>&nbsp;<br class="desktop-only">
