--- a/_layouts/foss4guk2023.html
+++ b/_layouts/foss4guk2023.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html class="foss4guk2023">
     {% include head_foss4guk2023.html %}
   <body>
     <div class="wrapper">
@@ -8,11 +8,14 @@
 		<header class="sticky" id="stickymenu">
 
 			<!-- FOSS4G UK Logo -->
+			<p class="logo"><a href="index.html"><object type="image/svg+xml" data="images/foss4guk2023-logo.svg"></object></a></p>
+	 
 			<!-- <p><a href="index.html"><object type="image/svg+xml" data="images/foss4guk2023-logo.svg">
      </object></a></p> -->
 			<p><a href="index.html"><img src="images/logo.png" width="300" alt="FOSS4G UK Logo"></a></p>
 
 			<!-- Menu -->
+			<a href="index.html#call-for-talks">Call for Talks</a>&nbsp;<br class="desktop-only">
 			<!--<a href="index.html#keynotes">Keynotes</a>&nbsp;<br class="desktop-only">
 			<a href="index.html#venues">Venues</a>&nbsp;<br class="desktop-only">
 			<a href="sponsorship.html">Sponsorship</a>&nbsp;<br class="desktop-only"> -->
