--- a/stylesheets/osgeouk_newlogo.css
+++ b/stylesheets/osgeouk_newlogo.css
@@ -98,3 +98,22 @@ body.foss4guk2018 #sailingship {
       display: none;
     }
 }
+
+/** FOSS4G UK 2023 **/
+
+.foss4guk2023 .logo object {width: 100%}
+
+.foss4guk2023 p.logo {
+    margin: 1em 0 0 0 ;
+}
+
+@media print, screen and (max-width: 960px) {
+    .foss4guk2023 .logo object {
+      width: 50%;
+    }
+}
+@media print, screen and (max-width: 480px) {
+    .foss4guk2023 .logo object {
+      width: 66%;
+    }
+}
