Initial mini-site for FOSS4G 2023

--- a/_layouts/foss4guk2023.html
+++ b/_layouts/foss4guk2023.html
@@ -11,9 +11,10 @@
 			<p class="logo"><a href="index.html"><object type="image/svg+xml" data="images/foss4guk2023-logo.svg"></object></a></p>
 
 			<!-- Menu -->
-			<a href="index.html#call-for-talks">Call for Talks</a>&nbsp;<br class="desktop-only">
-			<!--<a href="index.html#keynotes">Keynotes</a>&nbsp;<br class="desktop-only">
 			<a href="index.html#venues">Venues</a>&nbsp;<br class="desktop-only">
+			<a href="index.html#keynotes">Keynotes</a>&nbsp;<br class="desktop-only">
+			<a href="index.html#call-for-talks">Call for Talks</a>&nbsp;<br class="desktop-only">
+			<a href="index.html#registration">Registration</a>&nbsp;<br class="desktop-only">
 			<a href="sponsorship.html">Sponsorship</a>&nbsp;<br class="desktop-only"> -->
 			
 			<br>
