Update from last years

--- a/_layouts/foss4guk2023.html
+++ b/_layouts/foss4guk2023.html
@@ -15,7 +15,7 @@
 			<a href="index.html#keynotes">Keynotes</a>&nbsp;<br class="desktop-only">
 			<a href="index.html#call-for-talks">Call for Talks</a>&nbsp;<br class="desktop-only">
 			<a href="index.html#registration">Registration</a>&nbsp;<br class="desktop-only">
-			<a href="sponsorship.html">Sponsorship</a>&nbsp;<br class="desktop-only"> -->
+			<a href="sponsorship.html">Sponsorship</a>&nbsp;<br class="desktop-only">
 			
 			<br>
 			<p><i>Many thanks to our national sponsors supporting FOSS4G:UK Local 2023:</i></p>
