--- a/_layouts/foss4guk2023.html
+++ b/_layouts/foss4guk2023.html
@@ -11,8 +11,8 @@
 			<p class="logo"><a href="index.html"><object type="image/svg+xml" data="images/foss4guk2023-logo.svg"></object></a></p>
 			
 			<!-- Name -->
-			<p>FOSS4G:UK<br>
-			Local 2023</p>
+			<h1>FOSS4G:UK<br>
+			Local 2023</h1>
 
 			<!-- Menu -->
 			<a href="index.html#venues">Venues</a>&nbsp;<br class="desktop-only">
