--- a/_layouts/foss4guk2023.html
+++ b/_layouts/foss4guk2023.html
@@ -23,8 +23,11 @@
 			
 			<br>
 			<p><i>Many thanks to our national sponsors supporting FOSS4G:UK Local 2023:</i></p>
-			
-			
+            
+            <a href="https://www.addresscloud.com"><img src="images/addresscloud-logo.png" alt="AddressCloud logo" width="140">
+            
+			<a href="https://www.bgs.ac.uk/"><img src="https://www.bgs.ac.uk/wp-content/uploads/2022/08/BGS-Logo-Pos-RGB.svg" alt="British Geological Survey Logo" width="140"></a>
+            
 			<p><i><a href="sponsorship.html">Please check out all of our sponsors who are supporting FOSS4G:UK Local 2023</a></i></p>
 		
 		</header>
