--- a/_layouts/foss4guk2023.html
+++ b/_layouts/foss4guk2023.html
@@ -15,6 +15,7 @@
 			Local 2023</h1>
 
 			<!-- Menu -->
+			<a href="index.html">Home</a>&nbsp;<br class="desktop-only">
 			<a href="index.html#venues">Venues</a>&nbsp;<br class="desktop-only">
 			<a href="index.html#keynotes">Keynotes</a>&nbsp;<br class="desktop-only">
 			<a href="index.html#call-for-talks">Call for Talks</a>&nbsp;<br class="desktop-only">
