add the ribbon;fix the sidebar

--- a/_layouts/foss4guk2023.html
+++ b/_layouts/foss4guk2023.html
@@ -5,13 +5,14 @@
     <div class="wrapper">
 
 		<!-- This goes in the left column, everything in here is 'sticky' -->
-		<header class="sticky" id="stickymenu">
+		<header id="stickymenu">
 
 			<!-- FOSS4G UK Logo -->
 			<p class="logo"><a href="index.html"><object type="image/svg+xml" data="images/foss4guk2023-logo.svg"></object></a></p>
 			
 			<!-- Name -->
 			<h1>FOSS4G:UK<br>
+			  <img alt="OSGeo Ribbon" id="h1ribbon" src="images/swooshukie.svg" />
 			Local 2023</h1>
 
 			<!-- Menu -->
