link to ribbon page

--- a/_layouts/foss4guk2023.html
+++ b/_layouts/foss4guk2023.html
@@ -12,7 +12,7 @@
 			
 			<!-- Name -->
 			<h1>FOSS4G:UK<br>
-			  <img alt="OSGeo Ribbon" id="h1ribbon" src="images/swooshukie.svg" />
+			  <a href="ribbon.html"><img alt="OSGeo Ribbon" id="h1ribbon" src="images/swooshukie.svg" /></a>
 			Local 2023</h1>
 
 			<!-- Menu -->
