--- a/_layouts/foss4guk2023.html
+++ b/_layouts/foss4guk2023.html
@@ -29,11 +29,13 @@
             <a href="https://www.addresscloud.com"><img src="images/addresscloud-logo.png" alt="AddressCloud logo" width="140">
             
 			<a href="https://www.bgs.ac.uk/"><img src="https://www.bgs.ac.uk/wp-content/uploads/2022/08/BGS-Logo-Pos-RGB.svg" alt="British Geological Survey Logo" width="140"></a>
-			
+			[<img src="../foss4guk2022local/images/ASTUN_LOGO.jpg" width="275" align="middle">](https://www.astuntechnology.com/)
 			<!--
 			<a href="https://www.geoxphere.com/"><img src="images/geoxphere.png" alt="Geoxphere Logo" width="140"></a>
 			-->
-            
+            <a href="https://www.astuntechnology.com"><img src="../foss4guk2022local/images/ASTUN_LOGO.jpg" alt="Astun logo" width="140">
+
+		    
 			<p><i><a href="sponsorship.html">Please check out all of our sponsors who are supporting FOSS4G:UK Local 2023</a></i></p>
 		
 		</header>
