info in metadata

--- a/_layouts/program2023.html
+++ b/_layouts/program2023.html
@@ -3,7 +3,11 @@
     {% include head_foss4guk2023.html %}
   <body>
     <div class="wrapper">
-
+      <nav>
+	<a href="./">FOSS4G UK 2023</a> |
+	<a href="./{{page.venuepage}}">{{page.venuename}} Venue Information</a>
+      </nav>
+	
 		<!-- This goes in the right column -->
 		<section class="content">
 			{{ content }}
