--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -294,6 +294,32 @@ header {
 
 /* Jonny Huck CSS ends */
 
+html.foss4guk2023.program body{
+    color: #555;
+}
+
 html.foss4guk2023.program section.content {
     width: 100%;
+    border-top: 1px solid black;
+    padding-top: 0.5em;
+}
+
+
+table.programme td {
+    vertical-align: top;
+}
+
+
+table.programme span.speaker {
+    font-weight: bold;
+    font-size: 110%;
+}
+
+table.programme span.talktitle {
+    font-weight: bold;
+    font-size: 110%;
+}
+
+table.programme p.bio {
+    font-style: italic
 }
