--- a/_includes/head_foss4guk2023.html
+++ b/_includes/head_foss4guk2023.html
@@ -1,6 +1,12 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+  <meta property="og:image"
+	content="https://uk.osgeo.org/foss4guklocal2023/images/logo_preview.png"
+	/>
+  
+
   <title>OSGeo:UK</title>
   <link rel="stylesheet" href="/stylesheets/styles.css">
   <link rel="stylesheet" href="/stylesheets/github-light.css">
