add title, desc

--- a/_includes/head_foss4guk2023.html
+++ b/_includes/head_foss4guk2023.html
@@ -5,7 +5,9 @@
   <meta property="og:image"
 	content="https://uk.osgeo.org/foss4guklocal2023/images/logo_preview.png"
 	/>
-  
+  <meta property="og:title" content="FOSS4G UK Local 2023" />
+  <meta property="og:description" content="The UK's Open Source Geospatial distributed meeting, on September 7th 2023" />
+
 
   <title>OSGeo:UK</title>
   <link rel="stylesheet" href="/stylesheets/styles.css">
